--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 # Web Search API Keys (choose one or both)
-TAVILY_API_KEY=tvly-xxxxx      # Get your key at https://tavily.com
+TAVILY_API_KEY=     # Get your key at https://tavily.com
 PERPLEXITY_API_KEY=pplx-xxxxx  # Get your key at https://www.perplexity.ai
+Baidu_App_Id=  # https://fanyi-api.baidu.com/
+Baidu_App_Key= 
