实现基于LLMs的翻译3.9
实现基于LLMs的翻译3.9

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ TAVILY_API_KEY=     # Get your key at https://tavily.com
 PERPLEXITY_API_KEY=pplx-xxxxx  # Get your key at https://www.perplexity.ai
 Baidu_App_Id=  # https://fanyi-api.baidu.com/
 Baidu_App_Key= 
+Deepseek_r1= #https://cloud.siliconflow.cn/account/ak
